# mod_shared3p_emu

./: .gitignore  CMakeLists.txt
CMakeIncludes/: FindCryptopp.cmake  FindExprTk.cmake
debug_files/: shared3p_emu-models.cfg  shared3p_emu.cfg
packaging/configs/sharemind/: shared3p_emu.conf
packaging/configs/sharemind/conf.d/: mod-shared3p_emu.conf
packaging/debian/: conffiles
src/: BitVector.h  RandomFacility.cpp  SecretSharing.h  ShareVector.h  Shared3pConfiguration.cpp  Shared3pConfiguration.h  Shared3pModule.cpp  Shared3pModule.h  Shared3pPD.cpp  Shared3pPD.h  Shared3pPDPI.cpp  Shared3pPDPI.h  Shared3pValueHeap.h  Shared3pValueTraits.h  Shared3pVector.h  VMReferences.h  ValueTraits.h  mod_shared3p_emu.cpp
src/Facilities/: CxxRandomEngine.cpp  CxxRandomEngine.h  ExecutionModelEvaluator.cpp  ExecutionModelEvaluator.h  RandomFacility.cpp  RandomFacility.h
src/Protocols/: AESProtocol.cpp  AESProtocol.h  Binary.h  CRCProtocol.cpp  CRCProtocol.h  FixedPoint.h  MatrixMultiplicationProtocol.h  MatrixShufflingProtocol.h  Nullary.h  PrefixSumProtocols.h  Randomize.h  SoftFloatUtility.h  SortingProtocol.h  Ternary.h  Unary.h  unary.h
src/Syscalls/: AESSyscalls.cpp  AESSyscalls.h  BaseSyscalls.h  CRCSyscalls.cpp  CRCSyscalls.h  CarterWegmanSyscall.cpp  CarterWegmanSyscall.h  Common.h  FixSyscalls.cpp  FixSyscalls.h  FixedPoint.h  GenRandomPublicPermSyscall.h  ManyPrefixSumSyscall.h  MatrixMultiplicationSyscalls.h  MatrixShufflingSyscalls.h  Meta.h  ScalarProductSyscall.h  SortingSyscalls.cpp  SortingSyscalls.h
